style: increase card height to 520px to prevent clipping and add bottom margin

--- a/src/components/RideScreens.css
+++ b/src/components/RideScreens.css
@@ -421,8 +421,8 @@
   background-color: #BBCD2F;
   border-radius: 32px;
   width: 370px;
-  height: 480px;
-  margin-bottom: 24px;
+  height: 520px;
+  margin-bottom: 40px;
   position: relative;
   display: flex;
   flex-direction: column;
